# gst-plugins-base

./: configure.ac  meson.build  meson_options.txt
docs/: meson.build
docs/libs/: gst-plugins-base-libs-docs.sgml  gst-plugins-base-libs-sections.txt
docs/plugins/: cache.json  gst_plugins_cache.json
ext/: meson.build
ext/alsa/: Makefile.am  gstalsadeviceprovider.c  gstalsadeviceprovider.h  meson.build
ext/cdparanoia/: meson.build
ext/gl/: meson.build
ext/libvisual/: meson.build
ext/ogg/: meson.build
ext/opus/: meson.build
ext/pango/: gstbasetextoverlay.c  gsttextoverlay.c  gsttextoverlay.h  meson.build
ext/theora/: meson.build
ext/vorbis/: meson.build
gst/: meson.build
gst-libs/gst/: Makefile.am
gst-libs/gst/app/: gstappsink.c  gstappsink.h
gst-libs/gst/audio/: gstaudiodecoder.c
gst-libs/gst/dmabuf/: Makefile.am  dmabuf.c  dmabuf.h
gst-libs/gst/fft/: gstfftf32.c  gstfftf64.c  gstffts16.c  gstffts32.c
gst-libs/gst/pbutils/: encoding-profile.c  encoding-target.c  gstdiscoverer.c  pbutils-private.h
gst-libs/gst/rtsp/: gstrtspconnection.c
gst-libs/gst/tag/: meson.build
gst-libs/gst/video/: Makefile.am  gsth264encoderinterface.c  gsth264encoderinterface.h  gsth264parser.h  gstmpegvideoparser.c  gstmpegvideoparser.h  meson.build  video-crop.c  video-crop.h  video-info.c  video-info.h  video.c  video.h
gst/app/: meson.build
gst/encoding/: gstencodebin.c  gsth264encodebin.c  gsth264encodebin.h  meson.build
gst/ffmpegcolorspace/: avcodec.h  gstffmpegcodecmap.c  gstffmpegcodecmap.h  gstffmpegcolorspace.c  imgconvert.c
gst/playback/: gstdecodebin2.c  gstplaybin2.c  gstplaysink.c  gstsubtitleoverlay.c  gsturidecodebin.c
gst/stride/: Makefile.am  convert.c  gststridetransform.c
gst/typefind/: gsttypefindfunctions.c
pkgconfig/: Makefile.am  gstreamer-dmabuf-uninstalled.pc.in  gstreamer-dmabuf.pc.in  gstreamer-plugins-base-uninstalled.pc.in  gstreamer-plugins-base.pc.in
sys/: meson.build
sys/ximage/: ximagesink.c  ximagesink.h
sys/xvimage/: xvimagesink.c  xvimagesink.h
tests/check/: Makefile.am  meson.build
tests/check/libs/: videoparsers.c
tests/examples/overlay/: meson.build
tools/: gst-discoverer.c
