subdir('adder', components: [plugins_component, component('adder')])
subdir('app', components: [plugins_component, component('app')])
subdir('audioconvert', components: [plugins_component, component('audioconvert')])
subdir('audiorate', components: [plugins_component, component('audiorate')])
subdir('audioresample', components: [plugins_component, component('audioresample')])
subdir('audiotestsrc', components: [plugins_component, component('audiotestsrc')])
subdir('encoding', components: [plugins_component, component('encoding')])
subdir('gio', components: [plugins_component, component('gio')])
subdir('pbtypes', components: [plugins_component, component('pbtypes')])
subdir('playback', components: [plugins_component, component('playback')])
subdir('rawparse', components: [plugins_component, component('rawparse')])
subdir('subparse', components: [plugins_component, component('subparse')])
subdir('tcp', components: [plugins_component, component('tcp')])
subdir('typefind', components: [plugins_component, component('typefind')])
subdir('videoconvert', components: [plugins_component, component('videoconvert')])
subdir('videorate', components: [plugins_component, component('videorate')])
subdir('videoscale', components: [plugins_component, component('videoscale')])
subdir('videotestsrc', components: [plugins_component, component('videotestsrc')])
subdir('volume', components: [plugins_component, component('volume')])
